feat: ロードされているもののリポジトリを表示するように など

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,8 @@ name: Gravel
 version: ${project.version}
 main: org.jaoafa.gravel.Main
 api-version: 1.16
+softdepend:
+  - MyMaid4
 commands:
   loadplugin:
     description: プラグインをクローン・ビルドし、リロードします。
