--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # User-specific stuff
-.idea/
+.idea/*
+!.idea/scopes
+!.idea/copyright
+!.idea/codeStyles
+!.idea/inspectionProfiles
+!.idea/misc.xml
 
 *.iml
 *.ipr
